Fixes layout issues with the sources dropdown (#981)
* extract dropdown component

* Fix source tab dropdown layout issues

* double scrollbar
* item font-size
* text overflow

--- a/public/js/components/Dropdown.css
+++ b/public/js/components/Dropdown.css
@@ -4,10 +4,24 @@
   width: 150px;
   max-height: 300px;
   z-index: 1000;
+  position: absolute;
+  top: 35px;
+  right: 8px;
 }
 
 .dropdown li {
-  padding-left: 10px;
+  padding: 5px 10px;
+  overflow: hidden;
+  height: 30px;
+  text-overflow: ellipsis;
+}
+
+.dropdown li:nth-of-type(2n) {
+  background-color: var(--theme-tab-toolbar-background);
+}
+
+.dropdown li:hover {
+  background-color: var(--theme-toolbar-background);
 }
 
 .dropdown li:hover {
@@ -18,7 +32,17 @@
 .dropdown ul {
   list-style: none;
   line-height: 2em;
-  font-size: 0.8em;
+  font-size: 1em;
   margin: 0;
   padding: 0;
+}
+
+.dropdown-mask {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 999;
+  left: 0;
+  top: 0;
 }
